# flask-todo

./: .gitignore  README.md  docker-compose.yml  docker.env  pyproject.toml  sample.env  todo.postman_collection.json
backend/: Dockerfile
backend/main/: main.py  prestart.sh  pyproject.toml  run.sh
backend/main/alembic/: env.py
backend/main/alembic/versions/: 2dbdcc3b4578_initial_migration.py
backend/main/app/api/: deps.py
backend/main/app/api/v1/: auth.py  tag.py  task.py  user.py
backend/main/app/core/: auth.py  config.py  crypt.py  security.py
backend/main/app/crud/: __init__.py  base.py  tag.py  task.py  task_tag.py  user.py
backend/main/app/db/: base.py  base_class.py  health_check.py  init_db.py  session.py
backend/main/app/models/: tag.py  task.py  task_tag.py  user.py
backend/main/app/schemas/: __init__.py  auth.py  base.py  tag.py  task.py  task_tag.py  user.py
backend/main/app/strings/: __init__.py  auth.py  general.py  tag.py  task.py  user.py
backend/main/app/utils/: constants.py
scripts/: set_env.sh
