[tool.poetry]
name = "flask-todo"
version = "0.1.0"
description = ""
authors = ["Muhammad Fahad Baig <fadi@fahadbaig.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
marshmallow = "^3.19.0"
sqlalchemy = "^1.4.43"
pydantic = {extras = ["email"], version = "^1.10.2"}
sqlalchemy-utils = "^0.38.3"
strenum = "^0.4.8"
psycopg2-binary = "^2.9.5"
flask-marshmallow = "^0.14.0"
passlib = "^1.7.4"
flask-jwt-extended = "^4.4.4"
flask-restful = "^0.3.9"
pycryptodome = "^3.15.0"
gunicorn = "^20.1.0"
tenacity = "^8.1.0"
alembic = "^1.8.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
